--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,4 +6,9 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "apscheduler>=3.11.0",
+    "loguru>=0.7.3",
 ]
+
+[[index]]
+default = true
+url = "https://mirrors.aliyun.com"
