Add permissions section to cicd.yml for content write access

--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -6,6 +6,9 @@ on:
   pull_request:
     branches: [ "main" ]
 
+permissions:
+  contents: write
+
 env:
   TZ: Asia/Shanghai
   BUILD_GREETING: hello
